# mascot-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
crates/mascot-web/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  index.html
crates/mascot-web-core/: Cargo.toml
crates/mascot-web-core/src/: layout.rs  lib.rs  message.rs  similarity.rs
crates/mascot-web-worker/: Cargo.toml
crates/mascot-web-worker/src/: lib.rs
crates/mascot-web/assets/: main.css
crates/mascot-web/src/: coloring.rs  dataset.rs  export.rs  layout.rs  main.rs  render.rs  similarity.rs  worker.rs
docs/: splash-editing-api-review.md
scripts/: check-dead-css.sh
src/: annotated_ms2.rs  dataset.rs  error.rs  gems_a10.rs  gnps.rs  iter_mgf_property.rs  lib.rs  mascot_generic_format.rs  mascot_generic_format_builder.rs  mascot_generic_format_metadata.rs  mascot_generic_format_metadata_builder.rs  mass_spec_gym.rs  numeric.rs
tests/: test_iter_mgf_property.rs  test_mgf_header_normalization.rs  test_mgf_structured_header_validation.rs  test_read_mgf_documents.rs
