[package]
name = "mascot-web"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "Dioxus web app to visualize MGF spectra as a spectral similarity graph"
repository = "https://github.com/LucaCappelletti94/mascot-rs"
license = "MIT"
publish = false

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-free-icons = { version = "0.10", features = [
    "font-awesome-solid",
    "font-awesome-brands",
] }
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", default-features = false, features = ["alloc"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
mascot-rs = { path = "../..", default-features = false }
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits", default-features = false }
parquet = { version = "58", default-features = false }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
